--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
                 <div class="perfect-box">
                     <span id="perfect">
                         <div class="mixFruits_perfectState_">
-                            <img src="image/allFruits.png">
+                            <img src="allFruits.png">
                             mixFruits:<span id="mixFruits_perfectState">0</span>
                         </div>
                         <div class="grape_perfectState_">
-                            <img src="image/grape.png">
+                            <img src="grape.png">
                             grape:<span id="grape_perfectState">0</span>
                         </div>
                         <div class="blueberry_perfectState_">
-                            <img src="image/blueberry.png">
+                            <img src="blueberry.png">
                             blueberry:<span id="blueberry_perfectState">0</span>
                         </div>
                     </span>
@@ -115,7 +115,7 @@
             <div class="reset-button">
                 <!-- <input type="checkbox" id="reset-button"> -->
                 <!-- <img src="image/logo.png" height="90px" /> -->
-                <input type="image" src="image/logo.png" height="90px" id="reset-button">
+                <input type="image" src="logo.png" height="90px" id="reset-button">
                 <!-- <label for="reset-button">RESET</label> -->
                 <!-- <label for="reset-button">RESET</label> -->
             </div>
