change image path

--- a/index.html
+++ b/index.html
@@ -32,15 +32,18 @@
                 <div class="perfect-box">
                     <span id="perfect">
                         <div class="mixFruits_perfectState_">
-                            <img src="allFruits.png">
+                            <!-- <img src="allFruits.png"> -->
+                            <img src="https://github.com/jani-onct/jani-onct.github.io/blob/main/allFruits.png?raw=true">
                             mixFruits:<span id="mixFruits_perfectState">0</span>
                         </div>
                         <div class="grape_perfectState_">
-                            <img src="grape.png">
+                            <!-- <img src="grape.png"> -->
+                            <img src="https://github.com/jani-onct/jani-onct.github.io/blob/main/grape.png?raw=true">
                             grape:<span id="grape_perfectState">0</span>
                         </div>
                         <div class="blueberry_perfectState_">
-                            <img src="blueberry.png">
+                            <!-- <img src="blueberry.png"> -->
+                            <img src="https://github.com/jani-onct/jani-onct.github.io/blob/main/blueberry.png?raw=true">
                             blueberry:<span id="blueberry_perfectState">0</span>
                         </div>
                     </span>
@@ -115,7 +118,8 @@
             <div class="reset-button">
                 <!-- <input type="checkbox" id="reset-button"> -->
                 <!-- <img src="image/logo.png" height="90px" /> -->
-                <input type="image" src="logo.png" height="90px" id="reset-button">
+                <!-- <input type="image" src="logo.png" height="90px" id="reset-button"> -->
+                <input type="image" src="https://github.com/jani-onct/jani-onct.github.io/blob/main/logo.png?raw=true" height="90px" id="reset-button">
                 <!-- <label for="reset-button">RESET</label> -->
                 <!-- <label for="reset-button">RESET</label> -->
             </div>
