--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
     <meta charset="UTF-8">
     <!-- <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,user-scable=no"> -->
@@ -8,7 +8,7 @@
     <!-- <link rel="stylesheet" href="reset.css"> -->
     <link rel="stylesheet" href="FieldIndicator_3_5.css" >	
     <link rel="apple-touch-icon" sizes="350x350" href="image/allFruits.png">
-    <title>Game 3</title>
+    <title>Robocon2023_FieldIndicator</title>
 </head>
 <body>
     <div class="subete">
@@ -34,16 +34,19 @@
                         <div class="mixFruits_perfectState_">
                             <!-- <img src="allFruits.png"> -->
                             <img src="https://github.com/jani-onct/jani-onct.github.io/blob/main/allFruits.png?raw=true">
+                            &ensp;
                             mixFruits:<span id="mixFruits_perfectState">0</span>
                         </div>
                         <div class="grape_perfectState_">
                             <!-- <img src="grape.png"> -->
                             <img src="https://github.com/jani-onct/jani-onct.github.io/blob/main/grape.png?raw=true">
+                            &ensp;
                             grape:<span id="grape_perfectState">0</span>
                         </div>
                         <div class="blueberry_perfectState_">
                             <!-- <img src="blueberry.png"> -->
                             <img src="https://github.com/jani-onct/jani-onct.github.io/blob/main/blueberry.png?raw=true">
+                            &ensp;
                             blueberry:<span id="blueberry_perfectState">0</span>
                         </div>
                     </span>
