add link tag of manifest 2 index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!-- <link rel="stylesheet" href="reset.css"> -->
     <link rel="stylesheet" href="FieldIndicator_3_5.css" >	
     <link rel="apple-touch-icon" sizes="350x350" href="image/allFruits.png">
+    <link rel="manifest" href="manifest.json">
     <title>Robocon2023_FieldIndicator</title>
 </head>
 <body>
