--- a/index.html
+++ b/index.html
@@ -34,19 +34,22 @@
                     <span id="perfect">
                         <div class="mixFruits_perfectState_">
                             <!-- <img src="allFruits.png"> -->
-                            <img src="https://github.com/jani-onct/Robocon2023_FieldIndicator/blob/PWA/image/allFruits.png?raw=true">
+                            <!-- <img src="https://github.com/jani-onct/Robocon2023_FieldIndicator/blob/PWA/image/allFruits.png?raw=true"> -->
+                            <img src="https://github.com/jani-onct/Robocon2023_FieldIndicator/blob/main/image/allFruits.png?raw=true">
                             &ensp;
                             mixFruits:<span id="mixFruits_perfectState">0</span>
                         </div>
                         <div class="grape_perfectState_">
                             <!-- <img src="grape.png"> -->
-                            <img src="https://github.com/jani-onct/Robocon2023_FieldIndicator/blob/PWA/image/grape.png?raw=true">
+                            <!-- <img src="https://github.com/jani-onct/Robocon2023_FieldIndicator/blob/PWA/image/grape.png?raw=true"> -->
+                            <img src="https://github.com/jani-onct/Robocon2023_FieldIndicator/blob/main/image/grape.png?raw=true">
                             &ensp;
                             grape:<span id="grape_perfectState">0</span>
                         </div>
                         <div class="blueberry_perfectState_">
                             <!-- <img src="blueberry.png"> -->
-                            <img src="https://github.com/jani-onct/Robocon2023_FieldIndicator/blob/PWA/image/blueberry.png?raw=true">
+                            <!-- <img src="https://github.com/jani-onct/Robocon2023_FieldIndicator/blob/PWA/image/blueberry.png?raw=true"> -->
+                            <img src="https://github.com/jani-onct/Robocon2023_FieldIndicator/blob/main/image/blueberry.png?raw=true">
                             &ensp;
                             blueberry:<span id="blueberry_perfectState">0</span>
                         </div>
@@ -123,7 +126,8 @@
                 <!-- <input type="checkbox" id="reset-button"> -->
                 <!-- <img src="image/logo.png" height="90px" /> -->
                 <!-- <input type="image" src="logo.png" height="90px" id="reset-button"> -->
-                <input type="image" src="https://github.com/jani-onct/Robocon2023_FieldIndicator/blob/PWA/image/logo.png?raw=true" height="90px" id="reset-button">
+                <!-- <input type="image" src="https://github.com/jani-onct/Robocon2023_FieldIndicator/blob/PWA/image/logo.png?raw=true" height="90px" id="reset-button"> -->
+                <input type="image" src="https://github.com/jani-onct/Robocon2023_FieldIndicator/blob/main/image/logo.png?raw=true" height="90px" id="reset-button">
                 <!-- <label for="reset-button">RESET</label> -->
                 <!-- <label for="reset-button">RESET</label> -->
             </div>
