--- a/index.html
+++ b/index.html
@@ -147,14 +147,15 @@
     </div>
     <script src="FieldIndicator_3_5.js"></script>
     <script>
-        // ServiceWorker登録：https://developers.google.com/web/fundamentals/primers/service-workers/?hl=ja
         if ('serviceWorker' in navigator) {
-            navigator.serviceWorker.register('sw.js').then(function(registration) {
-                console.log('ServiceWorker registration successful with scope: ', registration.scope);
-            }).catch(function(err) {
-                console.log('ServiceWorker registration failed: ', err);
+          window.addEventListener('load', function() {
+            navigator.serviceWorker.register('/color-name/sw.js').then(function(registration) {
+              console.log('ServiceWorker registration successful with scope: ', registration.scope);
+            }, function(err) {
+              console.log('ServiceWorker registration failed: ', err);
             });
+          });
         }
-        </script>
+      </script>
 </body>
 </html>
