--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <!-- <link rel="stylesheet" href="reset.css"> -->
     <link rel="stylesheet" href="FieldIndicator_3_5.css" >	
-    <link rel="apple-touch-icon" sizes="350x350" href="image/Robocon2023_logo.png">
+    <link rel="apple-touch-icon" sizes="350x350" href="images/Robocon2023_logo.png">
     <title>Robocon2023_FieldIndicator</title>
 </head>
 <body>
